[package]
name = "spongefish-stark"
edition = "2021"
license = "Apache-2.0"
version = "1.0.0-rc1"

[workspace]

[dependencies]
p3-air = "^0.4.1"
p3-batch-stark = "^0.4.1"
p3-baby-bear = "^0.4.1"
p3-challenger = "^0.4.1"
p3-commit = "^0.4.1"
p3-dft = "^0.4.1"
p3-field = "^0.4.1"
p3-fri = "^0.4.1"
p3-lookup = "^0.4.1"
p3-matrix = "^0.4.1"
p3-merkle-tree = "^0.4.1"
p3-poseidon2-air = { version = "^0.4.1" }
p3-poseidon2 = "^0.4.1"
p3-symmetric = "^0.4.1"
p3-uni-stark = "^0.4.1"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = { version = "^0.9", features = ["small_rng"] }
spongefish = { path = "../spongefish/spongefish" }
spongefish-circuit = { path = "../spongefish/circuit" }
spongefish-poseidon2 = { path = "../spongefish/poseidon2", features = ["p3-baby-bear"] }
